@@ -1,5 +1,6 @@
 package nl.tudelft.oopp.group43.project.controllers;
 
+import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
@@ -81,7 +82,7 @@ public class UserController {
      * @return the result of the login system.
      */
     @PostMapping("/token")
-    public ResponseEntity getToken(@RequestParam("username") final String username, @RequestParam("password") final String password) {
+    public ResponseEntity getToken(@RequestParam("username") final String username, @RequestParam("password") final String password) throws UnsupportedEncodingException {
         String usernameDecoded = utf8DecodeValue(username);
         String passwordDecoded = utf8DecodeValue(password);
 
@@ -99,6 +100,7 @@ public class UserController {
 
     /**
      * find the user info by the user token.
+     *
      * @param token the token of the user.
      * @return the result of the request.
      */
@@ -106,11 +108,11 @@ public class UserController {
     public ResponseEntity getName(@RequestParam("token") final String token) {
         User user = userService.findByToken(token);
         if (user == null) {
-            ErrorResponse errorResponse = new ErrorResponse("error","can not find user, please get token again", HttpStatus.FORBIDDEN.value());
-            return new  ResponseEntity<>(errorResponse,HttpStatus.FORBIDDEN);
+            ErrorResponse errorResponse = new ErrorResponse("error", "can not find user, please get token again", HttpStatus.FORBIDDEN.value());
+            return new ResponseEntity<>(errorResponse, HttpStatus.FORBIDDEN);
         }
-        UserResponse userResponse = new UserResponse(user,HttpStatus.OK.value());
-        return new ResponseEntity<>(user,HttpStatus.OK);
+        UserResponse userResponse = new UserResponse(user, HttpStatus.OK.value());
+        return new ResponseEntity<>(user, HttpStatus.OK);
     }
 
 
@@ -122,10 +124,59 @@ public class UserController {
 
     /**
      * Decodes a utf8 encoded value.
+     *
      * @param value utf8-encoded string value
      * @return decoded string value
      */
-    private String utf8DecodeValue(String value) {
-        return URLDecoder.decode(value, StandardCharsets.UTF_8);
+    private String utf8DecodeValue(String value) throws UnsupportedEncodingException {
+        return URLDecoder.decode(value, StandardCharsets.UTF_8.name());
+    }
+
+    /**
+     * Change the password of an user based on token.
+     *
+     * @param oldPassword the old password of that user
+     * @param newPassword the new password provided by the user
+     * @param token       the token assigned to a certain user
+     * @return the status of the password change
+     */
+    @PostMapping("/changePassword")
+    public ResponseEntity changePassword(@RequestParam("oldPassword") String oldPassword, @RequestParam("newPassword") final String newPassword, @RequestParam(value = "token", defaultValue = "invalid") final String token) throws UnsupportedEncodingException {
+
+        String passwordDecoded = utf8DecodeValue(newPassword);
+
+
+        oldPassword = utf8DecodeValue(oldPassword);
+
+        User user = repository.findUserByToken(token);
+
+        if (token.equals("invalid")) {
+            ErrorResponse errorResponse = new ErrorResponse("Change password error", "Check if you sent the token", HttpStatus.FORBIDDEN.value());
+            return new ResponseEntity<>(errorResponse, HttpStatus.FORBIDDEN);
+        }
+
+        if (repository.findUserByToken(token) == null) {
+            ErrorResponse errorResponse = new ErrorResponse("Change password error", "Invalid token.", HttpStatus.FORBIDDEN.value());
+            return new ResponseEntity<>(errorResponse, HttpStatus.FORBIDDEN);
+        }
+
+        String usernameDecoded = utf8DecodeValue(user.getUsername());
+
+        try {
+            user = securityService.autoLogin(usernameDecoded, oldPassword);
+        } catch (Exception e) {
+            ErrorResponse errorResponse = new ErrorResponse("Change password error", "Invalid old password.", HttpStatus.FORBIDDEN.value());
+            return new ResponseEntity<>(errorResponse, HttpStatus.FORBIDDEN);
+        }
+
+
+        user.setPassword(newPassword);
+
+
+        userService.save(user);
+        ErrorResponse okResponse = new ErrorResponse("Change password", "UPDATED PASSWORD", HttpStatus.OK.value());
+        return new ResponseEntity<>(okResponse, HttpStatus.OK);
+
+
     }
 }
